@@ -3,18 +3,22 @@
 This repository has been created to store your final year project.
 
 In order to run the application please follow the given steps:
-
+ 
 1. Click on PROJECT folder which is the main folder
-
-2. Under PROJECT select  src/main/java folder
-
-3. Under the src/main/java folder please select the model package
-
-4. Right click on Stratego.java class
-
+2. Under PROJECT select src/main/java folder
+3. Under the src/main/java folder please select the uk.co.gurbir.PROJECT package
+4. Right click on App.java class
 5. From the given options select Run as
-
 6. From Run as, Select Java application
 
-7. A message stating 'Thread starting for player Red' and 'Thread starting for player Blue' will display in the terminal underneath that a board with the pieces has been generated with the pieces placed randomly
+The Game window should pop up which includes the board and all the pieces along with the extra features diaplyed.
+
+// Please ensure that you have installed the pom.xml file correctly. If the code does not work as intended.
+
+// Please select the Main Project Folder, Right click on it and From Runs As please select Run Configurations and Under the arguments section, go to VM arguments and try and replace or add the following line: --module-path 
+"C:\Users\Gurman\Documents\JAVALibraries\openjfx-17.0.10_windows-x64_bin-sdk\javafx-sdk-17.0.10\lib" --add-modules javafx.controls,javafx.fxml" 
+
+// Please make the changes to the line accordingly where you Java libraries are stored. Please ensure that if the code doesn't work on just downloading the folder. 
+
+// Try to have the same sdk version in order to make it run.
  
